Update Docker image tag in release workflow to use 'express-app'

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -28,4 +28,4 @@ jobs:
         platforms: linux/amd64,linux/arm64
         context: .
         push: true
-        tags: ${{ secrets.DOCKER_USERNAME }}/expressapp:latest
+        tags: ${{ secrets.DOCKER_USERNAME }}/express-app:latest
